Cleaned up Log in and Register Pages

--- a/src/main/webapp/resources/css/ct-paper.css
+++ b/src/main/webapp/resources/css/ct-paper.css
@@ -4341,9 +4341,10 @@ pre.prettyprint{
   margin-top: 50px;
 }
 
-.container-ride {
-    margin-left: inherit;
-    margin-right: inherit;
+
+.sign-out {
+    color: inherit;
+    font-size: 15px;
 }
 
 
