--- a/src/main/webapp/resources/css/ct-paper.css
+++ b/src/main/webapp/resources/css/ct-paper.css
@@ -3583,6 +3583,10 @@ background-color: rgba(255, 143, 94, 0.6);
 .demo-header .motto h3{
   margin-bottom: 0;
 }
+.main-trip-summary{
+  background-image: url('../img/background-road.jpg');
+}
+
 .separator{
   content: "Separator";
   color: #FFFFFF;
